apply-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "ztp-test-policies"
