upgrade.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "ztp-core-policies"
